--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ env:
   - SYMFONY_VERSION=2.6.*
   - SYMFONY_VERSION=2.7.*
   - SYMFONY_VERSION=2.8.*
+  - SYMFONY_VERSION=3.0.*
+  - SYMFONY_VERSION=3.1.*
+  - SYMFONY_VERSION=3.2.*
 
 before_script:
   - composer require --dev symfony/framework-bundle:${SYMFONY_VERSION}
