--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "homepage" : "https://github.com/toaotc/FrameworkExtraBundle",
     "require": {
-        "symfony/framework-bundle": "~2.3"
+        "symfony/framework-bundle": "~2.3 || ~3.0"
     },
     "autoload": {
         "psr-4": { "Toa\\Bundle\\FrameworkExtraBundle\\": "" }
